<resources>
    <string name="app_name">Not Much</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="signin">Sign in</string>
    <string name="login">Login</string>
    <string name="signup">New user? Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create an account</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
